# claimlens

./: .gitignore
apps/mobile53/: .gitignore  app.config.ts  nativewind.config.js  package-lock.json  package.json  rn-clean-start.sh  tailwind.config.js  tsconfig.json
apps/mobile53/app/: _layout.tsx  history.tsx  index.tsx  profile.tsx  results.tsx  saved.tsx
apps/mobile53/app/components/: UrlInput.tsx  VideoPreview.tsx
apps/mobile53/app/screens/: AnalyzingScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  SavedScreen.tsx
apps/mobile53/components/: Badge.tsx  ClaimCard.tsx  ConsensusBadge.tsx  ShareCard.tsx  Skeleton.tsx  SourceLink.tsx
apps/mobile53/hooks/: useAnalyze.ts
apps/mobile53/lib/: api.ts  theme.ts  utils.ts
infra/: supabase_schema.sql
infra/cloud-run/: deploy.sh
infra/github-actions/: api-ci.yml  mobile-ci.yml
services/api/: Dockerfile  pyproject.toml
services/api/claimlens/: cache.py  db.py  deps.py  main.py  models.py  openai_client.py  pipeline.py  prompts.py  search.py  youtube.py
services/api/claimlens/claimlens/: models.py
