[project]
name = "claimlens-api"
version = "0.1.0"
dependencies = [
  "fastapi~=0.111",
  "uvicorn[standard]~=0.30",
  "httpx[http2]~=0.27",
  "pydantic~=2.7",
  "python-dotenv~=1.0",
  "redis~=5.0",
  "asyncpg~=0.29",
  "supabase~=2.5",
  "youtube-transcript-api~=0.6",
  "yt-dlp~=2024.7.9",
  "tiktoken~=0.7",
]

[tool.setuptools]
py-modules = []